hphp/hack/test/typecheck/lsb_disallow_override_private.php.exp
WARN: File "lsb_disallow_override_private.php", line 7, characters 17-17:
Static property is overridden: `$x` (Warn[12021])
  File "lsb_disallow_override_private.php", line 8, characters 18-20:
  Overriding static property is here
ERROR: File "lsb_disallow_override_private.php", line 8, characters 18-20:
Member `$x` may not override `__LSB` member of parent (Typing[4284])
  File "lsb_disallow_override_private.php", line 4, characters 28-30:
  This is being overridden
